# frostbuild

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.ja.md  README.md  benchmark_results_sample.json  deny.toml  frost.py  frost_bench.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: correctness.yml  feature.yml  research.yml
.github/workflows/: ci.yml  fuzz.yml  performance.yml  release.yml  security.yml  spam-guard.yml
bench/baselines/: 2026-07-05-E14-frost-poc.json  2026-07-19-E14-v0.2.0.json  2026-07-20-E14-java-frost-gradle-15.json  2026-07-20-E14-java-jar.json  2026-07-20-E14-java.json  2026-07-20-issue-17-performance.json  2026-07-20-issue-81-fast-noop.json  2026-07-21-E14-cas.json  2026-07-21-E14-go-clean-15.json  2026-07-21-E14-go.json  2026-07-21-E14-python-wheel.json  2026-07-21-E14-rust-incremental-15.json  2026-07-21-E14-rust.json  2026-07-21-E14-typescript-checkers-1-reverse.json  2026-07-21-E14-typescript-checkers-1.json  2026-07-21-E14-typescript-checkers-16-reverse.json  2026-07-21-E14-typescript-checkers-16.json  2026-07-21-E14-typescript-checkers-2-reverse.json  2026-07-21-E14-typescript-checkers-2.json  2026-07-21-E14-typescript-checkers-4-reverse.json  2026-07-21-E14-typescript-checkers-4.json  2026-07-21-E14-typescript-checkers-8-reverse.json  2026-07-21-E14-typescript-checkers-8.json  2026-07-21-E14-typescript-optimized.json  2026-07-21-E14-typescript-projects.json  2026-07-21-E14-typescript.json  2026-07-22-issue-25-daemon-noop.json  2026-07-23-issue-25-daemon-10k.json  legacy-python-sample.json
bench/profiles/: 2026-07-20-issue-17.json  2026-07-20-issue-81.json
build-cache-delta/: .gitignore
build-cache-delta/pkg/: CLAUDE.md  README.md
build-cache-delta/pkg/docs/: build-cache-research-memo.md
build-cache-delta/pkg/harness/: analyze.py  collect_corpus.sh  collect_rust_corpus.py  deltacdc.py  fastcdc.py  fastcdc_params.json  oracle_ablation.py  run_all.sh
build-cache-delta/pkg/results/: DELTACDC.md  SUMMARY.md  lua-O2_avg16.json  lua-O2_avg16.txt  lua-O2_avg512.json  lua-O2_avg512.txt  lua-O2_avg64.json  lua-O2_avg64.txt  lua-g_avg16.json  lua-g_avg16.txt  lua-g_avg512.json  lua-g_avg512.txt  lua-g_avg64.json  lua-g_avg64.txt  v4-survey.md
build-cache-delta/pkg/results/deltacdc/: rg-debug_avg512.json
build-cache-delta/pkg/results/wholeblob/: oracle.json  summary.json
crates/frostbuild-bench/: Cargo.toml
crates/frostbuild-bench/src/: lib.rs  main.rs
crates/frostbuild-cli/: Cargo.toml
crates/frostbuild-cli/src/: bazel.rs  jar.rs  main.rs  npm.rs  progress.rs  wheel.rs
crates/frostbuild-cli/tests/: e2e.rs
crates/frostbuild-core/: Cargo.toml
crates/frostbuild-core/src/: cas.rs  depfile.rs  fastcdc.rs  fastcdc_params.json  graph.rs  graph_store.rs  hashcache.rs  journal.rs  lib.rs  manifest.rs  paths.rs
crates/frostbuild-daemon/: Cargo.toml
crates/frostbuild-daemon/src/: lib.rs  main.rs
crates/frostbuild-exec/: Cargo.toml
crates/frostbuild-exec/src/: fast_noop.rs  lib.rs  progress.rs
crates/frostbuild-store/: Cargo.toml
crates/frostbuild-store/src/: lib.rs
docs/: 00_world_fastest_build_tools.ja.md  00_world_fastest_build_tools.md  01_architecture_nix_bazel_micro_partition.ja.md  01_architecture_nix_bazel_micro_partition.md  02_two_x_strategy.ja.md  02_two_x_strategy.md  03_papers_and_references.ja.md  03_papers_and_references.md  04_zig_implementation_plan.ja.md  04_zig_implementation_plan.md  05_benchmark_methodology.ja.md  05_benchmark_methodology.md  06_manifest_spec.md  06_ninja_importer.md  07_remote_cache_study.md  08_predictive_selection.md  09_learned_scheduling.md  09_platform_support.md  10_language_adapters.md  11_remote_execution_study.md  12_fuzzing.md  13_issue_implementation_matrix.md  14_bazel_gap_analysis.md  15_research_cache_layers.md  16_action_key_audit.md  17_java_gradle_maven_comparison.md  17_session_log_2026-07.md  18_polyglot_win_matrix.md  19_rust_cargo_comparison.md  20_go_build_comparison.md  21_typescript_tsc_comparison.md  22_developer_loop.md  23_bazel_migration.md  24_python_wheel_comparison.md  25_npm_workspace_import.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: depfile.rs  graph_store.rs  journal.rs  manifest.rs
sample/: BUILD.bazel  MODULE.bazel  frost.toml
sample/src/: app.fb  pkg00_mod00.fb  pkg00_mod01.fb  pkg00_mod02.fb  pkg00_mod03.fb  pkg00_mod04.fb  pkg00_mod05.fb  pkg00_mod06.fb  pkg00_mod07.fb  pkg01_mod00.fb  pkg01_mod01.fb  pkg01_mod02.fb  pkg01_mod03.fb  pkg01_mod04.fb  pkg01_mod05.fb  pkg01_mod06.fb  pkg01_mod07.fb  pkg02_mod00.fb  pkg02_mod01.fb  pkg02_mod02.fb  pkg02_mod03.fb  pkg02_mod04.fb  pkg02_mod05.fb  pkg02_mod06.fb  pkg02_mod07.fb  pkg03_mod00.fb  pkg03_mod01.fb  pkg03_mod02.fb  pkg03_mod03.fb  pkg03_mod04.fb  pkg03_mod05.fb  pkg03_mod06.fb  pkg03_mod07.fb  pkg04_mod00.fb  pkg04_mod01.fb  pkg04_mod02.fb  pkg04_mod03.fb  pkg04_mod04.fb  pkg04_mod05.fb  pkg04_mod06.fb  (+121 more)
sample/tests/: test_pkg00.fbtest  test_pkg01.fbtest  test_pkg02.fbtest  test_pkg03.fbtest  test_pkg04.fbtest  test_pkg05.fbtest  test_pkg06.fbtest  test_pkg07.fbtest  test_pkg08.fbtest  test_pkg09.fbtest  test_pkg10.fbtest  test_pkg11.fbtest  test_pkg12.fbtest  test_pkg13.fbtest  test_pkg14.fbtest  test_pkg15.fbtest  test_pkg16.fbtest  test_pkg17.fbtest  test_pkg18.fbtest  test_pkg19.fbtest
sample/tools/: BUILD.bazel  gen.py
sample_c/: frost.toml
sample_c/include/: util.h
sample_c/src/: main.c  util.c  util_internal.h
sample_c/tools/: gen_config.sh
scripts/: compare_bazel.sh  reproduce.sh  run_poc_benchmark.sh  spam_guard.py
tests/: test_frost.py  test_spam_guard.py
zig_skeleton/: README.ja.md  README.md  build.zig
zig_skeleton/src/: main.zig
