[workspace]
members = [
    "crates/frostbuild-core",
    "crates/frostbuild-exec",
    "crates/frostbuild-cli",
    "crates/frostbuild-store",
    "crates/frostbuild-daemon",
    "crates/frostbuild-bench",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/hjosugi/frost-build"

[workspace.dependencies]
anyhow = "1"
blake3 = { version = "1", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
memmap2 = "0.9"
postcard = { version = "1", default-features = false, features = ["alloc"] }
rayon = "1"
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2"
notify = "8"
ignore = "0.4"
proptest = "1"
frostbuild-core = { version = "0.2.0", path = "crates/frostbuild-core" }
frostbuild-exec = { version = "0.2.0", path = "crates/frostbuild-exec" }
frostbuild-store = { version = "0.2.0", path = "crates/frostbuild-store" }
frostbuild-daemon = { version = "0.2.0", path = "crates/frostbuild-daemon" }
frostbuild-bench = { version = "0.2.0", path = "crates/frostbuild-bench" }

[profile.release]
lto = "thin"
