[workspace]
members = [
    "crates/frostbuild-core",
    "crates/frostbuild-exec",
    "crates/frostbuild-cli",
    "crates/frostbuild-store",
    "crates/frostbuild-daemon",
    "crates/frostbuild-bench",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "0BSD"
repository = "https://github.com/hjosugi/frost-build"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
blake3 = { version = "1", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "1.1"
zip = { version = "8.6", default-features = false, features = ["deflate-flate2-zlib-rs"] }
zstd = "0.13"
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
clap_complete_nushell = "4.6"
crossterm = "0.29"
glob = "0.3"
memmap2 = "0.9"
postcard = { version = "1", default-features = false, features = ["alloc"] }
rayon = "1"
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2"
notify = "8"
quick-xml = { version = "0.41", features = ["serialize"] }
ignore = "0.4"
proptest = "1"
frostbuild-core = { version = "0.3.0", path = "crates/frostbuild-core" }
frostbuild-exec = { version = "0.3.0", path = "crates/frostbuild-exec" }
frostbuild-store = { version = "0.3.0", path = "crates/frostbuild-store" }
frostbuild-daemon = { version = "0.3.0", path = "crates/frostbuild-daemon" }
frostbuild-bench = { version = "0.3.0", path = "crates/frostbuild-bench" }

[profile.release]
lto = "thin"
